Fixing docstrings and testing

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py39
+envlist = py39,coverage
 
 [testenv]
 deps =
@@ -12,3 +12,10 @@ deps =
 commands =
     python setup.py test
 
+[testenv:coverage]
+deps = coverage
+commands =
+    coverage erase
+    coverage run setup.py test
+    coverage report --omit='.tox/*'
+    coverage html --omit='.tox/*'
